--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ repositories {
 dependencies {
     // Use the Kotlin JUnit 5 integration.
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
+    testImplementation "io.mockk:mockk:1.9.1"
 
     // Use the JUnit 5 integration.
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
